<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <ProgressBar
        android:id="@+id/pbDetailEvent"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_detail"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/svDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDetailEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            tools:context=".ui.detail.DetailFragment">

            <ImageView
                android:id="@+id/ivMediaCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/text_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/soft_red"
                android:justificationMode="inter_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivMediaCover" />

            <TextView
                android:id="@+id/tvOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/text_owner_name"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TableLayout
                android:id="@+id/tlCategoryLocationQuota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOwner">

                <TableRow>
                    <TextView
                        android:id="@+id/tvHeaderCategory"
                        android:text="@string/text_header_category"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/tvHeaderCityName"
                        android:text="@string/text_header_city_name"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/tvHeaderQuota"
                        android:text="@string/text_header_quota"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:gravity="center" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvCategory"
                        android:text="@string/text_category"
                        android:textSize="12sp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/tvCityName"
                        android:text="@string/text_city_name"
                        android:textSize="12sp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/tvQuota"
                        android:text="@string/text_remaining_quota"
                        android:gravity="center"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_time"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlCategoryLocationQuota" />

            <TextView
                android:id="@+id/tvBeginTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_begin_time"
                android:textSize="12sp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTime" />

            <TextView
                android:id="@+id/tvEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_end_time"
                android:textSize="12sp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBeginTime" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEndTime" />

            <TextView
                android:id="@+id/tvDescriptionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/text_description_content"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efabRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_register"
        android:textStyle="bold"
        android:backgroundTint="?attr/colorSecondary"
        android:autoLink="web"
        android:layout_gravity="end|bottom"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efabSeeWebPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_see_web_page"
        android:textStyle="bold"
        android:backgroundTint="?attr/colorPrimary"
        android:autoLink="web"
        android:layout_gravity="end|bottom"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>